<resources>
    <string name="app_name">Game backlog kotlin</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title">title</string>
    <string name="platform">platform</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="release">Release: %s</string>
</resources>
